--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-react-uno-starter",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,15 +13,12 @@
   },
   "devDependencies": {
     "@iconify/json": "^2.2.69",
-    "@unocss/preset-icons": "^0.50.4",
-    "@unocss/preset-uno": "^0.50.4",
-    "@unocss/preset-web-fonts": "^0.50.4",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.4",
-    "unocss": "^0.50.4",
-    "vite": "^4.2.0-beta.1"
+    "unocss": "^0.58.4",
+    "vite": "^5.0.12"
   }
 }
